pyquest/ql/test/semantic_analysis/valid/test021.ql
// Complex computed question with mixed types
form testForm {
	"First Question"
	someIdentifier : boolean = (25.5 >= 10) && ((10.0 / 3) - 15 < -10 * 2)
}