pyquest/ql/test/semantic_analysis/invalid/test030.ql
// Complex condition with incompatible types
form testForm {
	if ((15.5 >= 15) && ((3.0 * True) - 15 > -10 / 2)) {
		"First Question"
		someIdentifier : integer
	}
}